--- a/hello.html
+++ b/hello.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="russia, nature, beauty, attraction">
-    <meta name="description" content="Российские достопримечательности">
-    <title>Резюме</title>
+    <meta name="description" content="About me">
+    <title>Vladislav</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<h1>Hello! I'm Vladislav</h1>
+<body>
+    <h1>Hello! I'm Vladislav</h1>
+
+    <div>
+        <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov" width="300">
+
+        <h2>And this is my website for you</h2>
+    </div>
+</body>
+
