--- a/hello.html
+++ b/hello.html
@@ -12,10 +12,19 @@
 <body>
     <h1>Hello! I'm Vladislav</h1>
 
-    <div>
-        <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov" width="300">
+    <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov" width="300">
 
-        <h2>And this is my website for you</h2>
+    <h2>And this is my website for you</h2>
+    <div>
+        <p>My name is Vladislav Romanov and i want to become a Frontend Developer</p>
+        <p>My education: Secondary specialized, at the Omsk College of Transport Construction by profession - Technician;</p>
+        <p>At the moment I am actively studying at the Frontend developer courses at: <a href="https://ru.hexlet.io/my">Hexlet</a>. There are ready-made projects on GitHub;</p>
+        <p>Work experience, unfortunately, is not yet related to IT: Operator at Copycenter 2022 - now Commodity operator at Gazprom Neft Lubricants LLC 2021 - 2022 Operator for the preparation of raw materials and the release of semi-finished products and products at JSC Omsky Kauchuk 2019 - 2021</p>
+        <p>I work with JavaScript, GitHub, HTML, CSS;</p>
+        <p>I currently live in the city of Rudny, Kostanay region, Kazakhstan;</p>
+        <p>I am actively looking for a job. Ready to move or work online;</p>
+        <p>All my life I was drawn to the profession of a developer, now I decided that the time has come.</p>
+        <a href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/">LinkedIn</a>
     </div>
 </body>
 
