--- a/hello.html
+++ b/hello.html
@@ -16,15 +16,14 @@
 
     <h2>And this is my website for you</h2>
     <div>
-        <p>Hello. I'm Vlad and currently I'm studying at the Frontend developer courses at: https://ru.hexlet.io, in addition you can find my ready-made projects on GitHub;</p>
-        <p>I graduated from the Omsk College of Transport Construction and my qualification was - Technician. Then I worked as Commodity operator at “Gazprom Neft Lubricants” LLC from 2021 to 2022 and also as an operator for the preparation of raw materials and the release of semi-finished products and products at JSC “Omsky Kauchuk” 2019 - 2021.</p>
+        <p>Hello. I'm Vlad and currently I'm studying at the Frontend developer courses at: <a href="https://ru.hexlet.io">Hexlet</a>, in addition you can find my ready-made projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a>;</p>
+        <p>I graduated from the Omsk College of Transport Construction and my qualification was - Technician. Then I worked as Commodity operator at “Gazprom Neft Lubricants” LLC also as an operator for the preparation of raw materials and products at JSC “Omsky Kauchuk”</p>
         <p>Despite that my education and occupation were connected with the oil and gas industry, but i`ve always dreamt that one day I will work in the IT field.</p>
         <p>At the moment I am actively studying and developing new skills and knowledges and I work with JavaScript, GitHub, HTML, CSS;</p>
         <p>Moreover i currently live in the Rudny city, Kostanay region, Kazakhstan; I am looking for a job and ready to relocate or work online;</p>
         <p>In conclusion I've always had this craving for the profession of a developer and now I think that the time has come.</p>
-        <p>I am actively looking for a job. Ready to move or work online;</p>
+        <br>
+        <br>
         <a href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/">LinkedIn</a>
-        <a href="https://ru.hexlet.io">Hexlet</a>
     </div>
 </body>
-
