--- a/hello.html
+++ b/hello.html
@@ -10,20 +10,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello! I'm Vladislav</h1>
+    <section>
+        <h1>Hello! I'm Vladislav</h1>
 
-    <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov" width="300">
+        <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov" width="300">
 
-    <h2>And this is my website for you</h2>
-    <div>
-        <p>Hello. I'm Vlad and currently I'm studying at the Frontend developer courses at: <a href="https://ru.hexlet.io">Hexlet</a>, in addition you can find my ready-made projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a>;</p>
-        <p>I graduated from the Omsk College of Transport Construction and my qualification was - Technician. Then I worked as Commodity operator at “Gazprom Neft Lubricants” LLC also as an operator for the preparation of raw materials and products at JSC “Omsky Kauchuk”</p>
-        <p>Despite that my education and occupation were connected with the oil and gas industry, but i`ve always dreamt that one day I will work in the IT field.</p>
-        <p>At the moment I am actively studying and developing new skills and knowledges and I work with JavaScript, GitHub, HTML, CSS;</p>
-        <p>Moreover i currently live in the Rudny city, Kostanay region, Kazakhstan; I am looking for a job and ready to relocate or work online;</p>
-        <p>In conclusion I've always had this craving for the profession of a developer and now I think that the time has come.</p>
-        <br>
-        <br>
-        <a href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/">LinkedIn</a>
+        <h2>And this is my website</h2>
+        <div>
+            <p>Hello. I'm Vlad and currently I'm studying at the Frontend developer courses at: <a href="https://ru.hexlet.io">Hexlet</a>, in addition you can find my ready-made projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a>;</p>
+            <p>I graduated from the Omsk College of Transport Construction and my qualification was - Technician. Then I worked as Commodity operator at “Gazprom Neft Lubricants” LLC also as an operator for the preparation of raw materials and products at JSC “Omsky Kauchuk”</p>
+            <p>Despite that my education and occupation were connected with the oil and gas industry, but i`ve always dreamt that one day I will work in the IT field.</p>
+            <p>At the moment I am actively studying and developing new skills and knowledges and I work with JavaScript, GitHub, HTML, CSS;</p>
+            <p>Moreover i currently live in the Rudny city, Kostanay region, Kazakhstan; I am looking for a job and ready to relocate or work online;</p>
+            <p>In conclusion I've always had this craving for the profession of a developer and now I think that the time has come.</p>
+        </div>
+    </section>
+    <div class="footer">
+        <ul>
+            <li>Contact me:</li>
+            <li>Romanov20let@gmail.com</li>
+            <li><a href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/">LinkedIn</a></li>
+            <li><a href="https://vk.com/vromanov95">VKontakte</a></li>
+        </ul>
     </div>
 </body>
