--- a/hello.html
+++ b/hello.html
@@ -28,12 +28,13 @@
             <ul>
                 <li>Contact me:</li>
                 <li>Romanov20let@gmail.com</li>
-                <li><a href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/">LinkedIn</a></li>
-                <li><a href="https://vk.com/vromanov95">VKontakte</a></li>
+                <li><a class="link" href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/">LinkedIn</a></li>
+                <li><a class="link" href="https://vk.com/vromanov95">VKontakte</a></li>
             </ul>
             <ul>
-                <li><a href="https://github.com/Romanov55?tab=repositories">My projects</a></li>
-                <li><a href="https://ru.hexlet.io/u/draik55">My study profile</a></li>
+                <li>Info:</li>
+                <li><a class="link" href="https://github.com/Romanov55?tab=repositories">My projects</a></li>
+                <li><a class="link" href="https://ru.hexlet.io/u/draik55">My study profile</a></li>
             </ul>
         </div>
     </section>
