--- a/hello.html
+++ b/hello.html
@@ -8,34 +8,39 @@
     <meta name="description" content="About me">
     <title>Vladislav</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/cdda4cf947.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+        <h3 class="text-head" >Опыт работы</h3>
+    </header>
     <section>
-        <h1>Hello! I'm Vladislav and this website about me</h1>
-
         <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov" width="300">
-
+        
         <div class="mainInfo">
+            <h1>Hello! I'm Vladislav and this website about me</h1>
+            
             <p>Hello. I'm Vlad and currently I'm studying at the Frontend developer courses at: <a href="https://ru.hexlet.io">Hexlet</a>, in addition you can find my ready-made projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a>;</p>
             <p>I graduated from the Omsk College of Transport Construction and my qualification was - Technician. Then I worked as Commodity operator at “Gazprom Neft Lubricants” LLC also as an operator for the preparation of raw materials and products at JSC “Omsky Kauchuk”</p>
             <p>Despite that my education and occupation were connected with the oil and gas industry, but i`ve always dreamt that one day I will work in the IT field.</p>
             <p>At the moment I am actively studying and developing new skills and knowledges and I work with JavaScript, GitHub, HTML, CSS;</p>
             <p>Moreover i currently live in the Rudny city, Kostanay region, Kazakhstan; I am looking for a job and ready to relocate or work online;</p>
             <p>In conclusion I've always had this craving for the profession of a developer and now I think that the time has come.</p>
+            <div>
+                <a class="link" href="https://vk.com/vromanov95" target="_blank">
+                    <i class="fa fa-vk" href="https://vk.com/vromanov95" target="_blank" aria-hidden="true"></i>
+                </a>
+                <a class="link" href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a class="link" href="https://github.com/Romanov55?tab=repositories" target="_blank"><i class="fa fa-github"></i></a>
+            </div>
         </div>
     </section>
-        <div class="footer">
-            <ul>
-                <li>Contact me:</li>
-                <li>Romanov20let@gmail.com</li>
-                <li><a class="link" href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/">LinkedIn</a></li>
-                <li><a class="link" href="https://vk.com/vromanov95">VKontakte</a></li>
-            </ul>
-            <ul>
-                <li>Info:</li>
-                <li><a class="link" href="https://github.com/Romanov55?tab=repositories">My projects</a></li>
-                <li><a class="link" href="https://ru.hexlet.io/u/draik55">My study profile</a></li>
-            </ul>
+    <div class="footer">
+        <p class="year">2022</p>
+        <div>
+            <a class="link" href="https://vk.com/vromanov95" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a>
+            <a class="link" href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/" target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a class="link" href="https://github.com/Romanov55?tab=repositories" target="_blank"><i class="fa fa-github"></i></a>
         </div>
-    </section>
+    </div>
 </body>
