--- a/hello.html
+++ b/hello.html
@@ -18,7 +18,7 @@
         <div class="main">
             <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov" width="300">
             
-            <div class="mainInfo">
+            <div>
                 <p>Hello. I'm Vlad and currently I'm studying at the Frontend developer courses at: <a href="https://ru.hexlet.io">Hexlet</a>, in addition you can find my ready-made projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a>;</p>
                 <p>I graduated from the Omsk College of Transport Construction and my qualification was - Technician. Then I worked as Commodity operator at “Gazprom Neft Lubricants” LLC also as an operator for the preparation of raw materials and products at JSC “Omsky Kauchuk”</p>
                 <p>Despite that my education and occupation were connected with the oil and gas industry, but i`ve always dreamt that one day I will work in the IT field.</p>
@@ -41,11 +41,11 @@
             </div>
             <div>
                 <h3 class="spec-h3">Work experience</h3>
-                <p>I'm studying at the Frontend developer courses at: Hexlet.</p>
+                <p>This is a business card site that shows my knowledge of HTML/CSS.</p>
             </div>
             <div>
-                <h3 class="spec-h3">Specialization</h3>
-                <p>I'm studying at the Frontend developer courses at: Hexlet.</p>
+                <h3 class="spec-h3">Desire to develop</h3>
+                <p>I want to develop as a front-end specialist and will be happy to join the company in a junior position. I'm a fast thinker with a willingness to learn and a willingness to take on challenging projects</p>
             </div>
         </div>
     </section>
