--- a/hello.html
+++ b/hello.html
@@ -36,21 +36,24 @@
         </div>
         <div class="purpose">
             <div>
+                <i class="fa-solid fa-paint-roller"></i>
                 <h3 class="spec-h3">Specialization</h3>
                 <p>I'm studying at the Frontend developer courses at: Hexlet.</p>
             </div>
             <div>
+                <i class="fa-solid fa-briefcase"></i>
                 <h3 class="spec-h3">Work experience</h3>
                 <p>This is a business card site that shows my knowledge of HTML/CSS.</p>
             </div>
             <div>
+                <i class="fa-solid fa-arrow-trend-up"></i>
                 <h3 class="spec-h3">Desire to develop</h3>
                 <p>I want to develop as a front-end specialist and will be happy to join the company in a junior position. I'm a fast thinker with a willingness to learn and a willingness to take on challenging projects</p>
             </div>
         </div>
     </section>
     <div class="footer">
-        <p class="year">2022</p>
+        <p class="year">2022 - </p>
         <div>
             <a class="link" href="https://vk.com/vromanov95" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a>
             <a class="link" href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/" target="_blank"><i class="fa fa-linkedin"></i></a>
