--- a/hello.html
+++ b/hello.html
@@ -11,12 +11,13 @@
     <script src="https://kit.fontawesome.com/cdda4cf947.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header class="header_fixed">
         <h1 class="text-head">Hello! I'm Vladislav and this website about me</h1>
     </header>
     <section>
         <div class="main">
-            <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov" width="300">
+            <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov" width="300" style="transform: matrix(1, 0, 0, 1, 0, 0); cursor: pointer;">
+
             
             <div>
                 <p>Hello. I'm Vlad and currently I'm studying at the Frontend developer courses at: <a href="https://ru.hexlet.io">Hexlet</a>, in addition you can find my ready-made projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a>;</p>
@@ -35,17 +36,17 @@
             </div>
         </div>
         <div class="purpose">
-            <div>
+            <div class="flex-item flex-item1">
                 <i class="fa-solid fa-paint-roller"></i>
                 <h3 class="spec-h3">Specialization</h3>
                 <p>I'm studying at the Frontend developer courses at: Hexlet.</p>
             </div>
-            <div>
+            <div class="flex-item flex-item2">
                 <i class="fa-solid fa-briefcase"></i>
                 <h3 class="spec-h3">Work experience</h3>
                 <p>This is a business card site that shows my knowledge of HTML/CSS.</p>
             </div>
-            <div>
+            <div class="flex-item flex-item3">
                 <i class="fa-solid fa-arrow-trend-up"></i>
                 <h3 class="spec-h3">Desire to develop</h3>
                 <p>I want to develop as a front-end specialist and will be happy to join the company in a junior position. I'm a fast thinker with a willingness to learn and a willingness to take on challenging projects</p>
