--- a/hello.html
+++ b/hello.html
@@ -16,10 +16,9 @@
     </header>
     <section>
         <div class="main">
-            <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov" width="300" style="transform: matrix(1, 0, 0, 1, 0, 0); cursor: pointer;">
-
+            <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov">
             
-            <div>
+            <div class="main-text">
                 <p>Hello. I'm Vlad and currently I'm studying at the Frontend developer courses at: <a href="https://ru.hexlet.io">Hexlet</a>, in addition you can find my ready-made projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a>;</p>
                 <p>I graduated from the Omsk College of Transport Construction and my qualification was - Technician. Then I worked as Commodity operator at “Gazprom Neft Lubricants” LLC also as an operator for the preparation of raw materials and products at JSC “Omsky Kauchuk”</p>
                 <p>Despite that my education and occupation were connected with the oil and gas industry, but i`ve always dreamt that one day I will work in the IT field.</p>
