--- a/hello.html
+++ b/hello.html
@@ -12,25 +12,36 @@
 </head>
 <body>
     <header class="header_fixed">
-        <h1 class="text-head">Hello! I'm Vladislav and this website about me</h1>
+        <i class="fa-solid fa-computer" id="fa-computer"></i>
     </header>
     <section>
         <div class="main">
             <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov">
-            
             <div class="main-text">
-                <p>Hello. I'm Vlad and currently I'm studying at the Frontend developer courses at: <a href="https://ru.hexlet.io">Hexlet</a>, in addition you can find my ready-made projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a>;</p>
-                <p>I graduated from the Omsk College of Transport Construction and my qualification was - Technician. Then I worked as Commodity operator at “Gazprom Neft Lubricants” LLC also as an operator for the preparation of raw materials and products at JSC “Omsky Kauchuk”</p>
-                <p>Despite that my education and occupation were connected with the oil and gas industry, but i`ve always dreamt that one day I will work in the IT field.</p>
-                <p>At the moment I am actively studying and developing new skills and knowledges and I work with JavaScript, GitHub, HTML, CSS;</p>
-                <p>Moreover i currently live in the Rudny city, Kostanay region, Kazakhstan; I am looking for a job and ready to relocate or work online;</p>
-                <p>In conclusion I've always had this craving for the profession of a developer and now I think that the time has come.</p>
-                <div>
-                    <a class="link" href="https://vk.com/vromanov95" target="_blank">
-                        <i class="fa fa-vk" href="https://vk.com/vromanov95" target="_blank" aria-hidden="true"></i>
-                    </a>
-                    <a class="link" href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <a class="link" href="https://github.com/Romanov55?tab=repositories" target="_blank"><i class="fa fa-github"></i></a>
+                <div class="head">
+                    <div class="head-main">
+                        <div class="hello-name">
+                            <h2 class="hello">Hello, I,m</h2>
+                            <h1 class="name">Vladislav</h1>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="main-info">
+                        <div class="info-container">
+                            <h1 class="number">2</h1>
+                            <p class="info-number">fully finished projects on github and many interesting</p>
+                        </div>
+                        <div class="info-container">
+                            <h1 class="number">30</h1>
+                            <p class="info-number">tests completed on the learning platform</p>
+                        </div>
+                    </div>
+                </div>
+                <div></div>
+                    <p>I graduated from the Omsk College of Transport Construction and my qualification was - Technician. Then I worked as Commodity operator at “Gazprom Neft Lubricants” LLC also as an operator for the preparation of raw materials and products at JSC “Omsky Kauchuk”</p>
+                    <p>Despite that my education and occupation were connected with the oil and gas industry, but i`ve always dreamt that one day I will work in the IT field.</p>
+                    <p>Moreover i currently live in the Rudny city, Kostanay region, Kazakhstan; I am looking for a job and ready to relocate or work online;</p>
+                    <p>In conclusion I've always had this craving for the profession of a developer and now I think that the time has come.</p>
                 </div>
             </div>
         </div>
@@ -38,12 +49,12 @@
             <div class="flex-item flex-item1">
                 <i class="fa-solid fa-paint-roller"></i>
                 <h3 class="spec-h3">Specialization</h3>
-                <p>I'm studying at the Frontend developer courses at: Hexlet.</p>
+                <p>I'm studying at the Frontend developer courses at: <a href="https://ru.hexlet.io/u/draik55"> Hexlet</a>. Here you can see my way</p>
             </div>
             <div class="flex-item flex-item2">
                 <i class="fa-solid fa-briefcase"></i>
                 <h3 class="spec-h3">Work experience</h3>
-                <p>This is a business card site that shows my knowledge of HTML/CSS.</p>
+                <p>At the moment I am actively studying and developing new skills and knowledges and I work with JavaScript, GitHub, HTML, CSS.  In addition you can find my ready-made projects on GitHub;</p>
             </div>
             <div class="flex-item flex-item3">
                 <i class="fa-solid fa-arrow-trend-up"></i>
