--- a/hello.html
+++ b/hello.html
@@ -11,60 +11,87 @@
     <script src="https://kit.fontawesome.com/cdda4cf947.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header_fixed">
-        <i class="fa-solid fa-computer" id="fa-computer"></i>
-    </header>
     <section>
+        <div class="contact">
+            <a class="link" href="https://vk.com/vromanov95" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a>
+            <a class="link" href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/" target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a class="link" href="https://github.com/Romanov55?tab=repositories" target="_blank"><i class="fa fa-github"></i></a>
+        </div>
         <div class="main">
-            <img class="avatar" src="avatar.jpeg" alt="VLadislav Romanov">
-            <div class="main-text">
-                <div class="head">
-                    <div class="head-main">
-                        <div class="hello-name">
-                            <h2 class="hello">Hello, I,m</h2>
-                            <h1 class="name">Vladislav</h1>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="main-info">
-                        <div class="info-container">
-                            <h1 class="number">2</h1>
-                            <p class="info-number">fully finished projects on github and many interesting</p>
-                        </div>
-                        <div class="info-container">
-                            <h1 class="number">30</h1>
-                            <p class="info-number">tests completed on the learning platform</p>
-                        </div>
-                    </div>
+            <img id="avatar" src="img/avatar.jpeg" alt="VLadislav Romanov">
+            <div>
+                <div class="hello-name">
+                    <h2 id="hello">Hello, I,m</h2>
+                    <h1 id="name">Vladislav</h1>
                 </div>
-                <div></div>
-                    <p>I graduated from the Omsk College of Transport Construction and my qualification was - Technician. Then I worked as Commodity operator at “Gazprom Neft Lubricants” LLC also as an operator for the preparation of raw materials and products at JSC “Omsky Kauchuk”</p>
-                    <p>Despite that my education and occupation were connected with the oil and gas industry, but i`ve always dreamt that one day I will work in the IT field.</p>
-                    <p>Moreover i currently live in the Rudny city, Kostanay region, Kazakhstan; I am looking for a job and ready to relocate or work online;</p>
-                    <p>In conclusion I've always had this craving for the profession of a developer and now I think that the time has come.</p>
+                <hr>
+                <div class="achievements">
+                    <div class="info-container">
+                        <h1 class="number">2</h1>
+                        <p class="info-number">fully finished projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a> and many interesting</p>
+                    </div>
+                    <div class="info-container">
+                        <h1 class="number">30</h1>
+                        <p class="info-number">tests completed on the learning platform <a href="https://ru.hexlet.io/u/draik55"> Hexlet</a></p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="purpose">
-            <div class="flex-item flex-item1">
-                <i class="fa-solid fa-paint-roller"></i>
-                <h3 class="spec-h3">Specialization</h3>
-                <p>I'm studying at the Frontend developer courses at: <a href="https://ru.hexlet.io/u/draik55"> Hexlet</a>. Here you can see my way</p>
+        <div class="list">
+            <div>
+                <img id="hack-img" src="img/hack.png" alt="study">
             </div>
-            <div class="flex-item flex-item2">
+            <div class="info-list">
+                <i class="fa-solid fa-graduation-cap"></i>
+                <h3>Specialization</h3>
+                <p class="description">I'm studying at the Frontend developer courses. Here you can see my way <a href="https://ru.hexlet.io/u/draik55"> Hexlet</a></p>
+            </div>
+        </div>
+        <div class="list">
+            <div class="info-list">
                 <i class="fa-solid fa-briefcase"></i>
-                <h3 class="spec-h3">Work experience</h3>
-                <p>At the moment I am actively studying and developing new skills and knowledges and I work with JavaScript, GitHub, HTML, CSS.  In addition you can find my ready-made projects on GitHub;</p>
+                <h3>Work experience</h3>
+                <p class="description">At the moment I am actively studying and developing new skills and knowledges and I work with JavaScript, GitHub, HTML, CSS.  In addition you can find my ready-made projects on GitHub;</p>
             </div>
-            <div class="flex-item flex-item3">
+            <div>
+                <img id="worker-img" src="img/worker.png" alt="">
+            </div>
+        </div>
+        <div class="list">
+            <div>
+                <img id="study-img" src="img/study.png" alt="">
+            </div>
+            <div class="info-list">
+                <i class="fa-solid fa-school-flag"></i>
+                <h3>Education</h3>
+                <p class="description">I graduated from the Omsk College of Transport Construction and my qualification was - Technician.</p>
+            </div>
+        </div>
+        </div>
+        <div class="purpose">
+            <div class="flex-item" id="flex-item1">
+                <i class="fa-solid fa-person-digging"></i>
+                <h3>Previous experience</h3>
+                <p>I worked as Commodity operator at “Gazprom Neft Lubricants” LLC also as an operator for the preparation of raw materials and products at JSC “Omsky Kauchuk”</p>
+            </div>
+            <div class="flex-item" id="flex-item2">
+                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                <h3>Dreams</h3>
+                <p>Despite that my education and occupation were connected with the oil and gas industry, but i`ve always dreamt that one day I will work in the IT field.</p>
+            </div>
+            <div class="flex-item" id="flex-item3">
                 <i class="fa-solid fa-arrow-trend-up"></i>
-                <h3 class="spec-h3">Desire to develop</h3>
+                <h3>Desire to develop</h3>
                 <p>I want to develop as a front-end specialist and will be happy to join the company in a junior position. I'm a fast thinker with a willingness to learn and a willingness to take on challenging projects</p>
             </div>
         </div>
     </section>
+    <div class="location">
+        <h2 id="map">Moreover i currently live in the Rudny city, Kostanay region, Kazakhstan; I am looking for a job and ready to relocate or work online</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2473346.292279319!2d62.72442885063397!3d52.74342933535132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2skz!4v1669908623047!5m2!1sru!2skz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <div class="footer">
-        <p class="year">2022 - </p>
+        <p id="year">2022 - </p>
         <div>
             <a class="link" href="https://vk.com/vromanov95" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a>
             <a class="link" href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/" target="_blank"><i class="fa fa-linkedin"></i></a>
