--- a/hello.html
+++ b/hello.html
@@ -83,13 +83,13 @@
             <div class="flex-item" id="flex-item3">
                 <i class="fa-solid fa-arrow-trend-up"></i>
                 <h3>Desire to develop</h3>
-                <p>I want to develop as a front-end specialist and will be happy to join the company in a junior position. I'm a fast thinker with a willingness to learn and a willingness to take on challenging projects</p>
+                <p>I want to develop as a front-end specialist and will be happy to join the company in a junior position. I am fast learner willing to work and achieve new skills. I am willing to participate in challenging projects</p>
             </div>
         </div>
     </section>
     <div class="location">
         <h2 id="map">Moreover i currently live in the Rudny city, Kostanay region, Kazakhstan; I am looking for a job and ready to relocate or work online</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2473346.292279319!2d62.72442885063397!3d52.74342933535132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2skz!4v1669908623047!5m2!1sru!2skz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d4910592.263118839!2d64.2480427!3d53.060797!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2skz!4v1669910339558!5m2!1sen!2skz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="footer">
         <p id="year">2022 - </p>
