--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section>
-        <div class="contact">
+        <div class="contacts">
             <a class="link" href="https://vk.com/vromanov95" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a>
             <a class="link" href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/" target="_blank"><i class="fa fa-linkedin"></i></a>
             <a class="link" href="https://github.com/Romanov55?tab=repositories" target="_blank"><i class="fa fa-github"></i></a>
