--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="achievements">
                     <div class="info-container">
                         <h1 class="number">2</h1>
-                        <p class="info-number">fully finished projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a> and many interesting</p>
+                        <p class="info-number">fully finished projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a> and other projects</p>
                     </div>
                     <div class="info-container">
                         <h1 class="number">30</h1>
