--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
             <a class="link" href="https://github.com/Romanov55?tab=repositories" target="_blank"><i class="fa fa-github"></i></a>
         </div>
         <div class="main">
-            <img id="avatar" src="img/avatar.jpeg" alt="VLadislav Romanov">
+            <img id="avatar" src="img/avatar.png" alt="VLadislav Romanov">
             <div>
                 <div class="hello-name">
-                    <h2 id="hello">Hello, I,m</h2>
-                    <h1 id="name">Vladislav</h1>
+                    <h1 id="name"> Romanov Vladislav</h1>
                 </div>
                 <div class="achievements">
                     <div class="info-container">
@@ -51,7 +50,7 @@
             <div class="info-list">
                 <i class="fa-solid fa-briefcase"></i>
                 <h3>Work experience</h3>
-                <p class="description">At the moment I am actively studying and developing new skills and knowledges and I work with JavaScript, GitHub, HTML, CSS.  In addition you can find my ready-made projects on GitHub;</p>
+                <p class="description">At the moment I am actively studying and developing new skills and knowledges and I work with JavaScript, GitHub, HTML, CSS.  In addition you can find my ready-made projects on <a class="link" href="https://github.com/Romanov55?tab=repositories" target="_blank">GitHub</a>;</p>
             </div>
             <div>
                 <img id="worker-img" src="img/worker.png" alt="">
