--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="main">
             <img id="avatar" src="img/avatar.png" alt="VLadislav Romanov">
-            <div>
+            <div class="hello">
                 <div class="hello-name">
                     <h1 id="name"> Romanov Vladislav</h1>
                 </div>
