--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
         </div>
     </section>
     <div class="location">
-        <h2 id="map">Moreover i currently live in the Rudny city, Kostanay region, Kazakhstan; I am looking for a job and ready to relocate or work online</h2>
+        <h2 id="map-loc">Moreover i currently live in the Rudny city, Kostanay region, Kazakhstan; I am looking for a job and ready to relocate or work online</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1034094.6289190331!2d63.44529580625772!3d52.98690636274658!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2skz!4v1671004852714!5m2!1sru!2skz" width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="footer">
         <p id="year">2022 - </p>
