--- a/index.html
+++ b/index.html
@@ -11,29 +11,30 @@
     <script src="https://kit.fontawesome.com/cdda4cf947.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+        <div class="main">
+            <img id="avatar" src="img/avatar.png" alt="VLadislav Romanov">
+            <div class="hello">
+                <div>
+                    <h1>Hi there, my name is</h1>
+                </div>
+                <div class="hello-name">
+                    <h1>Romanov</h1>
+                    <h1>Vladislav</h1>
+                </div>
+                <div class="achievements">
+                    <div class="info-container">
+                       <h1>and I want to achieve high results in development</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <section>
         <div class="contacts">
             <a class="link" href="https://vk.com/vromanov95" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a>
             <a class="link" href="https://www.linkedin.com/in/vladislav-romanov-4a0361254/" target="_blank"><i class="fa fa-linkedin"></i></a>
             <a class="link" href="https://github.com/Romanov55?tab=repositories" target="_blank"><i class="fa fa-github"></i></a>
-        </div>
-        <div class="main">
-            <img id="avatar" src="img/avatar.png" alt="VLadislav Romanov">
-            <div class="hello">
-                <div class="hello-name">
-                    <h1 id="name"> Romanov Vladislav</h1>
-                </div>
-                <div class="achievements">
-                    <div class="info-container">
-                        <h1 class="number">2</h1>
-                        <p class="info-number">fully finished projects on <a href="https://github.com/Romanov55?tab=repositories">GitHub</a> and other projects</p>
-                    </div>
-                    <div class="info-container">
-                        <h1 class="number">30</h1>
-                        <p class="info-number">tests completed on the learning platform <a href="https://ru.hexlet.io/u/draik55"> Hexlet</a></p>
-                    </div>
-                </div>
-            </div>
         </div>
         <div class="list">
             <div>
